1999-08-15  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* transports/smtp/smtp.c:
	    Detect better, when the STDIO fwrite() and friends
	    fail -- bdat_sync() was running wild loop in odd
	    situation when the recipient system died from under-
	    neath, and when coming back up, it rejected the pre-
	    existing connections...

1999-08-14  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* smtpserver/smtpserver.c, smtpserver/smtpcmds.c,
	  smtpserver/rfc821scn.c:
	    Done work to get the SLOPPY ('S') mode to work properly
	    with MAIL FROM and RCPT TO contained addresses.

	* utils/makedb/makedb.c:
	    When a duplicate key is give, print out the key value
	    in same form as the debug mode at the smtpserver does it.

	* utils/policy-builder.sh.in:
	    Remove previous static blocking list source entries.

1999-08-08  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* man/smtpserver.8:
	    A bug in the document..  TCP-wrapper service is
	    "smtp-receiver", not "smtp-receive" ...

	* transports/libta/mimeheaders.c:
	    Previous work had some weird problems, reworked, and
	    now it seems to work.

1999-08-06  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* transports/libta/mimeheaders.c:
	    MIME-conversion labeling had problems after the new form
	    of 'Received:' production at the router.

	* smtpserver/smtpserver.c:
	    Added couple of  setvbuf()  calls for stdout, and stderr
	    at the beginning of the smtpserver main() program.  Story
	    is long about what and where...  look at the ZMailer list
	    archive about ccNotes gateway problem.

1999-08-03  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* lib/selfaddrs.c:
	    After example code at the list, did some of my own code tweaks
	    to do comparison of address (IPv4 or IPv6) only, not the entire
	    'struct sockaddr', which contains ports, and other things...
	    (The port might not necessarily be zero in all cases..)

	* proto/cf/aliases.cf, proto/cf/aliases-new.cf, router/functions.c: