@@ -165,7 +165,6 @@ _hdr_compound(cp, np, cstart, cend, cpp, type, tp, tlist, tlistp)
 	TokenType	type;
 	token822	*tp, **tlist, **tlistp;
 {
-	token822 *tn = NULL;
 	int nest = 1;
 	int len = 1;
 	int n = *np;
@@ -221,7 +220,7 @@ nextline:
 		MKERROR(msgbuf, tlist);
 		tp->t_pname = NULL;	/* ugly way of signalling scanner */
 	} else if (*cp == cend) {	/* we found matching terminator */
-	  	++len;
+		++len;
 		--n;			/* move past terminator */
 	} else {	/* there was an error */
 	  abort() ; /* ??? some sort of sanity check ? */
@@ -252,24 +251,33 @@ _unfold(len, start, cpp, t)
 	while (len > 0 && start != cpe) {
 		if (*start == 0) {
 		  t = t->t_next;
+if (t == NULL) {
+  fprintf(stderr,"_unfold() did meet EndOfTokenchain; len=%d\n",len);
+  break;
+}
 		  start = t->t_pname;
+		  --len;
 #if 0 /* zero: unfold.. */
 		  *s++ = '\n';
 #else
 		  /* Skip all folding white-space */
 		  while (len > 0 && start != cpe &&
 			 (*start == ' '  || *start == '\t' ||
-			  *start == '\n' || *start == '\r'))
+			  *start == '\n' || *start == '\r')) {
 		    ++start;
+		    --len;
+		  }
 		  /* And replace it with *one* space */
 		  *s++ = ' ';
 #endif
-		  --len;
 		}
 		if (*start == '\n') {
 			++start;
+			--len;
 			continue;
 		}
+		if (start == cpe)
+		  break;
 		--len;
 		*s++ = *start++;
 	}
@@ -366,7 +374,7 @@ token822 * scan822(cpp, nn, c1, c2, allowcomments, tlistp)
 
 			  /* a compound token crossed line boundary */
 			  /* copy from ++cp for len chars */
-			  t.t_pname = _unfold(len, ++cp, cpp, ot);
+			  t.t_pname = _unfold(len-1, ++cp, cpp, ot);
 			  t.t_len   = strlen(t.t_pname);
 			} else {
 			  if (t.t_pname != NULL)
